Kubernetes-Manifests-file/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: test
  labels:
    role: api
    env: demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - name: api
        image: salhianis20/backend
        imagePullPolicy: Always
        ports:
        - containerPort: 3500
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3500
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 3500
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
        startupProbe:
          httpGet:
            path: /started
            port: 3500
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 30
