Kubernetes-Manifests-file/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: test
spec: 
  ports:
  - port: 3500
    protocol: TCP
  type: ClusterIP
  selector:
    role: api
