Kubernetes-Manifests-file/frontend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontend
  namespace: test
spec:
  ports:
  - port: 3000
    protocol: TCP
  type: ClusterIP
  selector:
    role: frontend
